--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
     <!-- Connectivity -->
 
-    <section id="#Connectivity">
+    <section id="Connectivity">
         <div class="container-fluid">
             <div class="row">
                         <h1 class="text-center">Connectivity</h1>
@@ -365,11 +365,12 @@
 
 
     <!-- Footer -->
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
         integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
     <footer class="bg-dark-gradient footer">
         <div class="footer-top">
-            <div class="container">
+            <div class="container" id="Contact Us">
 
                 <div class="row">
                     <div class="col-sm-6 col-lg-3 my-4">
